# mlcheck

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: api_reference.md  index.md  installation.md  quickstart.md
examples/: basic_usage.py  iris_example.py  test_pipeline.py  titanic_example.py
mlcheck/: __init__.py  analyzer.py  config.py  exceptions.py  inspect.py  report.py
mlcheck/health/: __init__.py  cardinality.py  constants.py  correlations.py  datatypes.py  duplicates.py  imbalance.py  leakage.py  missing.py  outliers.py
mlcheck/models/: __init__.py  issue.py
mlcheck/recommendations/: __init__.py  engine.py  rules.py
mlcheck/reporting/: __init__.py  console.py  html.py  json.py  markdown.py
mlcheck/scoring/: __init__.py  health_score.py
mlcheck/utils/: __init__.py  helpers.py  types.py  validators.py
tests/: test_cardinality.py  test_constants.py  test_correlations.py  test_datatype.py  test_duplicates.py  test_health_score.py  test_imbalance.py  test_leakage.py  test_missing.py  test_outliers.py  test_pipeline.py  test_recommendations.py  test_report.py  test_reporting.py  test_reporting_file_write.py
