[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcheck"
version = "0.0.0"
description = "Lightweight ML dataset health checks and recommendations"
authors = [
  {name = "", email = ""},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.poetry]

[tool.black]
line-length = 88
