[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlchecklib"
version = "0.1.0"
description = "Lightweight ML dataset health checks and recommendations"
authors = [
  {name = "Dax", email = "pdax128@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.21.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.black]
line-length = 88
